# generics

./: README.md
cmake/common/: CMakeLists.txt
cmake/common/src/: main.cpp  messager.cpp  messager.h
cmake/google-tests/: CMakeLists.txt
cmake/google-tests/app/: CMakeLists.txt  main.cpp
cmake/google-tests/lib/: CMakeLists.txt  messager.cpp  messager.h
cmake/google-tests/tests/: CMakeLists.txt  test_messager.cpp  test_messager.h
cpp/labs/lab1/: 1.3.cpp  Makefile
cpp/labs/lab2/: Makefile  car.cpp  car.h  example.in  main.cpp
make/: Makefile  clang.mk  gcc.mk
python/: discogs_art.py
python/template/: setup.py
python/template/template/: __init__.py  example.py
tex/: .gitignore  README.md
tex/common/: preamble.tex  report.tex
tex/examples/common/: Makefile  literature.bib  report.tex  title.tex
tex/examples/explanatory-note/: Makefile  eskdstamp.sty  literature.bib  report.tex  utf8gost71u.bst
tex/examples/explanatory-note/title/: Makefile
tex/examples/gost/: literature.bib  report.tex
tex/examples/gost/sections/: examples.tex
tex/examples/gost/title/: title.tex
tex/examples/lab/: Makefile  report.tex
tex/gost/: Makefile  preamble.tex  report.tex
tex/preamble/: common.tex  gost.tex
tex/style/: simple.tex
tex/template/: Makefile  style.tex  template.tex  title.tex
uml/: Makefile  activity.puml  class.puml  component.puml  plantuml.config  sequence.puml  use-case.puml
